--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@
     padding:0;
     outline:0;
 }
-.parent_body{
+
+body{
     background-color:#BAC7CE ;
     display: flex;
+    justify-content: center;
+    padding-top: 12%;
     height: 580px;
     width: 100%; 
     color: white;
@@ -28,6 +31,7 @@
    background-color: white;
    height: 20px;
    display: flex; 
+   justify-content: center;
    text-align: center;
    width:145px;
    background-image: linear-gradient(
@@ -63,6 +67,7 @@
     border-radius: 5px;
     border:none;
     color: white;
+    padding: 5px;
 }
 .budget{
     color: white;
@@ -205,4 +210,21 @@
     justify-content: center;
     padding: 5px;
     color: #304145;
+}
+th, td{
+    padding: 1px;
+    text-align:left;
+}
+th{
+    color:#b8362a;
+}
+td{
+    color: #304145;
+}
+.return, .save{
+    background-color: #BD3147;
+    border-radius: 5px;
+    border:none;
+    color: white;
+    padding: 5px;
 }
